objects/Case_Pipeline_Snapshot__c.object
<CustomObject><fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_Subject__c</fullName>
        <label>Case Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Run_Date__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Case Pipeline Snapshot</label><nameField>
        <displayFormat>CPS-{0000}</displayFormat>
        <label>CPS #</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Case Pipeline Snapshots</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>